[package]
name = "host"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
regex = "1"
filesys = { path = "../filesys" }
reqparser = { path = "../reqparser" }
response = { path = "../response" }
traits = { path = "../traits" }
utils = { path = "../utils" }