[package]
name = "main"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
regex = "1"
clap = { version = "3.0", features = ["derive"] }

filesys = { path = "../filesys" }
reqparser = { path = "../reqparser" }
responder = { path = "../responder" }
traits = { path = "../traits" }
utils = { path = "../utils" }
cli = { path = "../cli" }
host = { path = "../host" }
