[package]
name = "responder"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
filesys = { path = "../filesys" }
reqparser = { path = "../reqparser" }
utils = { path = "../utils" }
traits = { path = "../traits" }